# wayout

./: Cargo.nix  Cargo.toml  README.md  default.nix  flake.nix
src/: counter.rs  main.rs  watcher.rs
