[package]
name = "wayout"
version = "1.0.0"
edition = "2021"
description = "Automatic idle logout manager for Wayland"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
humantime = "2.1.0"
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ["client", "staging"] }
zbus = "4.1.2"
